<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenContacts</string>
    <string name="title_activity_main">Open Contacts</string>
    <string name="button_new">+</string>
    <string name="error_while_saving_contact">Error occurred while saving contact</string>
    <string name="error_while_loading_contact">Error occurred while loading contact</string>
    <string name="error_while_parsing_vcard_file">Error occurred while parsing vcard file</string>
    <string name="error_while_parsing_contact_details">Error occurred while parsing contact details</string>
    <string name="copied_phonenumber_to_clipboard">Copied phone number to clipboard</string>
    <string name="unexpected_error_happened">Unexpected error happened</string>
    <string name="title_activity_contact_details" translatable="false">ContactDetailsActivity</string>
    <string name="file_provider_authority" translatable="false">opencontacts.open.com.opencontacts.fileprovider</string>
    <string name="grant_read_call_logs_permission">Please grant read call logs permission to this application</string>
    <string name="exporting_contacts_complete">Finished exporting contacts</string>
    <string name="exporting_contacts_started">Started exporting contacts</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="export">Export</string>
    <string name="add_contact">Add contact</string>
    <string name="delete">Delete</string>
    <string name="edit_contact">Edit contact</string>
    <string name="add_to_contact">Add to Contact</string>
    <string name="search">Search</string>
    <string name="create_new_contact">Create new contact</string>
    <string name="add_to_existing">Add to existing contact</string>
    <string name="about">About</string>
    <string name="content_about">Brings privacy to your contacts information\n\n\n1.) No other app would be able to access contacts as it saves contacts in its own database separate from default contacts.\n\n2.) Can be used in place of your default phone(dialer) app.\n\n3.) You can export / import contacts from Android contacts app into this app.\n\n4.) Maintains call log as well coz Android call log app would not be able to show name of contact.\n\n5.) Also shows the person name upon receiving call.\n\n6.) Caller id would show upon call and you can drag to position it.</string>
    <string name="author_label">Author</string>
    <string name="my_name">Sultan Ahamer</string>
    <string name="issues_label">Issues</string>
    <string name="issues_link">https://gitlab.com/sultanahamer/OpenContacts/issues</string>
    <string name="more_apps">Find more apps</string>
    <string name="more_apps_link">https://gitlab.com/sultanahamer https://github.com/sultanahamer/</string>
    <string name="primary_number_help_text">Filled star before a number signifies that it would be primary number for that contact and would be used to call/sms when clicked from contacts list.\n\nBy default first number in list would be primary</string>
    <string name="primary_number">Primary Number(Starred)</string>
    <string name="learn_more_about_star">Tap to learn more about the star.</string>
    <string name="invalid_number">Invalid number</string>
    <string name="import_contacts">Import contacts</string>
    <string name="import_contacts_help_text">To import contacts into this app, goto default contacts app, export contacts. Try opening a file explorer and tap on exported file. In the list of open with apps, tap on open contacts, Open contacts would import all the contacts</string>
    <string name="search_contacts_help_text">Tap on search icon in the menu. T9 Keyboard would pop out with only numbers but small letters three on each would be present and covers all the alphabets. Use the numeric keys to input name.\nExample: To search for contact \'john\', type 5646 because letter j is present on number 5, o is on 6 and so on. It might look a bit new but would be better than normal full keyboard search.\nYou could also search for phone number by entering the required number with the help of same keyboard.\nIn case you want to go back to traditional search, you can do so by going into menu and selecting Toggle T9 search</string>
    <string name="search_contacts">Search contacts</string>
    <string name="help">Help</string>
    <string name="export_contacts_help_text">On the main screen, click the top right menu and then select export. It would export all the contacts to file and will tell the location of export</string>
    <string name="resync_call_log_with_contacts">Resync call log with contacts</string>
    <string name="callerid">Caller Id</string>
    <string name="callerid_help_text">Caller id refers to showing the name of contact during an incoming call.\n\nCaller id comes up and by default it sits almost at middle of the screen. But you can very well drag it to any place on screen you want and that position will be saved automatically.\n\n\nSo, after installing the app, try to get a call from any number and drag caller id to place it somewhere you like. But keep in my mind that caller id is draggable only when call comes when screen in unlocked. Android has this issue of not able to take input events on screens created while phone is locked. Hence make sure you unlock your screen before asking someone to call.</string>
    <string name="whats_new">Whats new</string>
    <string name="whatsapp_uri_with_phone_number_placeholder" translatable="false">https://wa.me/%1$s</string>
    <string name="telegram_uri_with_phone_number_placeholder" translatable="false">https://t.me/%1$s</string>
    <string name="signal_uri_with_phone_number_placeholder" translatable="false">https://signal.me/#p/%1$s</string>
    <string name="gitlab_repo_tags_url">https://gitlab.com/sultanahamer/OpenContacts/blob/master/CHANGELOG</string>
    <string name="delete_all_contacts">Delete all contacts</string>
    <string name="delete_all_contacts_question">Delete all contacts?</string>
    <string name="deleted_all_contacts">Deleted all contacts</string>
    <string name="total">Total :</string>
    <string name="switch_theme">Switch theme</string>
    <string name="could_not_open_social_app" tools:ignore="MissingTranslation">Could not open Social app</string>
    <string name="default_whatsapp_country_code">Default whatsapp country code</string>
    <string name="input_country_calling_code_title">Input country calling code</string>
    <string name="input_country_calling_code_description">Example: +91 for India. Do not forget to input + in front</string>
    <string name="okay">Okay</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="edit_before_call">Edit before call</string>
    <string name="do_you_want_to_export">Do you want to export?</string>
    <string name="failed">Failed</string>
    <string name="failed_exporting_contacts">Failed exporting contacts</string>
    <string name="filled_star">Filled Star</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="deleted">Deleted</string>
    <string name="phone_number">Phone Number</string>
    <string name="new_contact">New Contact</string>
    <string name="required_firstname_or_lastname">Required FirstName or LastName</string>
    <string name="required">Required</string>
    <string name="saved">Saved</string>
    <string name="imported_successfully">Imported Successfully</string>
    <string name="total_cards_imported">Total cards imported: %1$d</string>
    <string name="total_cards_ignored">Total cards ignored: %1$d</string>
    <string name="error">Error</string>
    <string name="could_not_process_import_without_storage_permission">Can not process this import without storage permission, please retry</string>
    <string name="grant_storage_permission">Grant storage permission</string>
    <string name="grant_storage_permisson_detail">Grant storage phone permission to be able to export and import contacts</string>
    <string name="choose_export_location" tools:ignore="MissingTranslation">Pick/Create a directory</string>
    <string name="choose_export_location_detail" tools:ignore="MissingTranslation">It will be used mainly for automatic contacts backup</string>
    <string name="caller_id_text">%1$s calling...</string>
    <string name="missed_call">Missed Call</string>
    <string name="incoming_call" tools:ignore="MissingTranslation">Incoming Call</string>
    <string name="outgoing_call" tools:ignore="MissingTranslation">Outgoing Call</string>
    <string name="rejected_call" tools:ignore="MissingTranslation">Rejected Call</string>
    <string name="missed_call_from">Missed call from %1$s %2$s</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="unknown">Unknown</string>
    <string name="enable_draw_over_apps">Enable draw over apps</string>
    <string name="enable_draw_over_apps_detail">This will allow app to show the calling person\'s name on screen during call</string>
    <string name="whatsapp_integration">Whatsapp Integration</string>
    <string name="whatsapp_help_text">Whatsapp requires mobile number including country code having \'+\' in it. In case your whatsapp number is 9876543210, you need to add your country code before it so that whatsapp can recognize it while trying to open conversation from OpenContacts. In case your country code is +91, then the complete number should look like +919876543210.\n\nIn menu of OpenContacts, there is a new entry to enter default whatsapp country code. While entering country code, do not forget to enter + in it. In case any of numbers present in OpenContacts is not having country code, this country code would be appended by default. In case of international whatsapp contacts, you would need to manually edit that number to include the correct country code</string>
    <string name="address">Address</string>
    <string name="version">Version</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sync">Sync</string>
    <string name="base_address_card_dav">Base address of card dav server</string>
    <string name="report_crash_screen_title">Report crash</string>
    <string name="share_log_help_text">One of your favorite app faced an issue. Sharing the below log would help fix it sooner. To share it, you can either use\n\n1. Share button in the top right menu and then email the log to developer or\n\n2. Copy the log using copy to clipboard button and share it on github issue.</string>
    <string name="Preferences">Preferences</string>
    <string name="time_format_12hrs_preference_title">Time Format 12 hours</string>
    <string name="time_format_12hrs_preference_summary">Enables 12 hours clock with AM/PM</string>
    <string name="whatsapp_integration_preference_title">Whatsapp integration</string>
    <string name="whatsapp_integration_preference_summary">Enables you to open a whatsapp conversation right from this app</string>
    <string name="t9_preference_title">T9 Search</string>
    <string name="t9_preference_summary">Enables quick search using T9 keyboard</string>
    <string name="export_call_log">Export call log</string>
    <string name="merge">Merge</string>
    <string name="more">More</string>
    <string name="groups">Groups</string>
    <string name="post_office_box">Post office box</string>
    <string name="state_province">State or province</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="country">Country</string>
    <string name="extended_address">Extended address</string>
    <string name="chat">Chat</string>
    <string name="chat_link" translatable="false">https://t.me/joinchat/CCdV7RFz8VE24KqFmhBWrg</string>
    <string name="contributors_title" tools:ignore="MissingTranslation">Contributors</string>
</resources>