<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/button_new"
        android:icon="@drawable/ic_add_circle_outline_24dp"
        android:title="@string/add_contact"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/import_export"
        android:title="@string/export"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_24dp"
        android:title="@string/sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/import_export"
        android:title="@string/import_contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_groups"
        android:icon="@drawable/ic_group_merge_contacts_24dp"
        android:title="@string/groups"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/help"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_preferences"
        android:title="@string/Preferences"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_more"
        android:title="@string/more"
        app:showAsAction="ifRoom" >
        <menu >
            <item
                android:id="@+id/action_export_call_log"
                android:icon="@drawable/import_export"
                android:title="@string/export_call_log"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_delete_all_contacts"
                android:icon="@drawable/delete"
                android:title="@string/delete_all_contacts"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_merge"
                android:icon="@drawable/ic_group_merge_contacts_24dp"
                android:title="@string/merge"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_resync"
                android:icon="@drawable/ic_sync_24dp"
                android:title="@string/resync_call_log_with_contacts"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_whats_new"
                android:icon="@drawable/ic_change_log_24dp"
                android:title="@string/whats_new"
                app:showAsAction="ifRoom" />

            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about"
                app:showAsAction="ifRoom" />

        </menu>
    </item>
</menu>