<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:minHeight="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/about" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_about" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:shrinkColumns="1">

                <TableRow>

                    <TextView
                        android:padding="3dp"
                        android:text="@string/author_label"
                        android:textAppearance="?android:textAppearanceSearchResultTitle"
                        android:textSize="18sp" />

                    <TextView
                        android:padding="3dp"
                        android:text="@string/my_name" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:padding="3dp"
                        android:text="@string/version"
                        android:textAppearance="?android:textAppearanceSearchResultTitle"
                        android:textSize="18sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/version"
                        android:padding="3dp" />
                </TableRow>

                <TableRow android:gravity="fill">

                    <TextView
                        android:padding="3dp"
                        android:text="@string/issues_label"
                        android:textAppearance="?android:textAppearanceSearchResultTitle"
                        android:textSize="18sp" />

                    <TextView
                        android:autoLink="web"
                        android:padding="3dp"
                        android:text="@string/issues_link" />
                </TableRow>

                <TableRow android:gravity="fill">

                    <TextView
                        android:padding="3dp"
                        android:text="@string/chat"
                        android:textAppearance="?android:textAppearanceSearchResultTitle"
                        android:textSize="18sp" />

                    <TextView
                        android:autoLink="web"
                        android:padding="3dp"
                        android:text="@string/chat_link" />
                </TableRow>

                <TableRow android:gravity="fill">

                    <TextView
                        android:padding="3dp"
                        android:text="@string/more_apps"
                        android:textAppearance="?android:textAppearanceSearchResultTitle"
                        android:textSize="18sp" />

                    <TextView
                        android:autoLink="web"
                        android:padding="3dp"
                        android:text="@string/more_apps_link" />
                </TableRow>
            </TableLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSearchResultTitle"
                android:text="@string/contributors_title" />

            <ListView
                android:nestedScrollingEnabled="true"
                android:id="@+id/contributors_list"
                android:layout_width="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_height="300dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
